--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,8 @@
   margin: 0;
   padding: 0;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
