creted login page layout

--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -1,9 +1,11 @@
-<p>main-page works!</p>
-<button type="button" class="btn btn-primary">Primary</button>
-<button type="button" class="btn btn-secondary">Secondary</button>
-<button type="button" class="btn btn-success">Success</button>
-<button type="button" class="btn btn-danger">Danger</button>
-<button type="button" class="btn btn-warning">Warning</button>
-<button type="button" class="btn btn-info">Info</button>
-<button type="button" class="btn btn-light">Light</button>
-<button type="button" class="btn btn-dark">Dark</button>
+<h1>Main-page</h1>
+
+<div class="container">
+  <div class="row">
+    <div class="col">Col one</div>
+    <div class="col">Col two</div>
+  </div>
+</div>
+
+
+<!-- https://www.youtube.com/watch?v=eow125xV5-c -->
