--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,18 +1,36 @@
-<form class="example-form">
-  <mat-form-field class="example-full-width">
-    <mat-label>Email</mat-label>
-    <input
-      type="email"
-      matInput
-      [formControl]="emailFormControl"   
-      placeholder="User email"
-    />
-    <mat-hint>Errors appear instantly!</mat-hint>
-    <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-        Please enter a valid email address
-      </mat-error>
-      <mat-error *ngIf="emailFormControl.hasError('required')">
-        Email is <strong>required</strong>
-      </mat-error>
-  </mat-form-field>
-</form>
+<div class="container h-100">
+  <!--  -->
+  <div class="row mt-xs-2 mt-sm-3 mt-lg-5 justify-content-center">
+    <div class="col-sm-12 col-lg-6">
+      <div class="wms-main-header wms-main-header--margin-bottom">
+        <h1>WMS</h1>
+      </div>
+
+      <form action="">
+        <div class="d-flex justify-content-center">
+          <mat-form-field appearance="outline" [style.width.%]="100">
+            <mat-label>Email</mat-label>
+            <input matInput placeholder="emial@123.com" />
+          </mat-form-field>
+        </div>
+
+        <div class="mt-3 d-flex justify-content-center">
+          <mat-form-field appearance="outline" [style.width.%]="100">
+            <mat-label>Password</mat-label>
+            <input matInput placeholder="user password" />
+          </mat-form-field>
+        </div>
+
+        <button mat-raised-button color="primary">Login</button>
+      </form>
+    </div>    
+  </div>
+  <!--  -->
+  <div class="row fixed-bottom mb-3 d-flex justify-content-center">
+    <div class="col-sm-12 col-lg-6">
+      <div class="alert alert-danger" role="alert">
+        Błędny login lub hasło!!!
+      </div>
+    </div>
+  </div>
+</div>
