--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,29 +6,50 @@
         <h1>WMS</h1>
       </div>
 
-      <form action="">
+      <h2>Please login to your account</h2>
+
+      <form [formGroup]="loginForm">
         <div class="d-flex justify-content-center">
           <mat-form-field appearance="outline" [style.width.%]="100">
             <mat-label>Email</mat-label>
-            <input matInput placeholder="emial@123.com" />
+            <input
+              matInput
+              placeholder="emial@123.com"
+              formControlName="email"
+            />         
           </mat-form-field>
         </div>
 
-        <div class="mt-3 d-flex justify-content-center">
+        <div class="mt-3 mb-4 d-flex justify-content-center">
           <mat-form-field appearance="outline" [style.width.%]="100">
             <mat-label>Password</mat-label>
-            <input matInput placeholder="user password" />
+            <input
+              matInput
+              placeholder="user password"
+              formControlName="password"
+            />            
           </mat-form-field>
         </div>
 
-        <button mat-raised-button color="primary">Login</button>
+        <button
+          mat-raised-button
+          color="primary"
+          (click)="submitForm()"
+          [disabled]="loginActionInProgress"
+        >
+          Login
+        </button>
       </form>
-    </div>    
+
+      <div class="row mt-5" *ngIf="loginActionInProgress">
+        <app-spinner/>
+      </div>
+    </div>
   </div>
   <!--  -->
-  <div class="row fixed-bottom mb-3 d-flex justify-content-center">
+  <div class="row fixed-bottom mb-3  d-flex justify-content-center">
     <div class="col-sm-12 col-lg-6">
-      <div class="alert alert-danger" role="alert">
+      <div class="alert alert-danger mx-2" role="alert">
         Błędny login lub hasło!!!
       </div>
     </div>
