--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="container h-100">
   <!--  -->
-  <div class="row mt-xs-2 mt-sm-3 mt-lg-5 justify-content-center">
+  <div class="row justify-content-center">
     <div class="col-sm-12 col-lg-6">
-      <div class="wms-main-header wms-main-header--margin-bottom">
+      <div class=" mt-xs-2 mt-sm-3 mt-lg-5 wms-main-header wms-main-header--margin-bottom">
         <h1>WMS</h1>
       </div>
 
@@ -25,7 +25,7 @@
             <mat-label>Password</mat-label>
             <input
               matInput
-              placeholder="user password"
+              type="password"              
               formControlName="password"
             />            
           </mat-form-field>
