--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,7 +1,7 @@
-@import "variables/variables";
+// @import "variables/variables";
 
 .wms-main-header {
-  background-color: $main-theme-color;
+  background-color: #3f51b5;
   widows: 100%;
   padding: 20px 40px 20px 40px;
   display: flex;
