--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container h-100">
   <!--  -->
-  <div class="row justify-content-center">
+  <div class="row flex-column d-flex justify-content-between align-items-center h-100">
     <div class="col-sm-12 col-lg-6">
       <div
         class="mt-xs-2 mt-sm-3 mt-lg-5 wms-main-header wms-main-header--margin-bottom"
@@ -8,19 +8,16 @@
         <h1>WMS</h1>
       </div>
 
-      <h2>Please login to your account</h2>     
+      <h2>Please login to your account</h2>
 
       <form [formGroup]="loginForm">
         <div class="d-flex justify-content-center">
-          <mat-form-field
-            appearance="outline"
-            [style.width.%]="100"           
-          >
+          <mat-form-field appearance="outline" [style.width.%]="100">
             <mat-label>Email</mat-label>
             <input
               matInput
               placeholder="emial@123.com"
-              formControlName="email"              
+              formControlName="email"
             />
           </mat-form-field>
         </div>
@@ -28,11 +25,7 @@
         <div class="mt-3 mb-4 d-flex justify-content-center">
           <mat-form-field appearance="outline" [style.width.%]="100">
             <mat-label>Password</mat-label>
-            <input
-              matInput
-              type="password"
-              formControlName="password"        
-            />
+            <input matInput type="password" formControlName="password" />
           </mat-form-field>
         </div>
 
@@ -50,13 +43,14 @@
         <app-spinner />
       </div>
     </div>
-  </div>
-  <!--  -->
-  <div class="row fixed-bottom mb-3 d-flex justify-content-center">
+
     <div class="col-sm-12 col-lg-6">
       <div class="alert alert-danger mx-2" role="alert">
         {{ errorMessage }}
       </div>
     </div>
-  </div>
+
+  </div> 
 </div>
+
+
