--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="container h-100">
-  <!--  -->
+
   <div class="row flex-column d-flex justify-content-between align-items-center h-100">
     <div class="col-sm-12 col-lg-6">
       <div
@@ -16,8 +16,9 @@
             <mat-label>Email</mat-label>
             <input
               matInput
+              type="email"
               placeholder="emial@123.com"
-              formControlName="email"
+              formControlName="email"              
             />
           </mat-form-field>
         </div>
@@ -32,7 +33,8 @@
         <button
           mat-raised-button
           color="primary"
-          (click)="submitForm()"
+          type="submit"
+          (click)="submitLoginForm()"
           [disabled]="loginActionInProgress"
         >
           Login
