--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,6 +1,7 @@
 <div class="container h-100">
-
-  <div class="row flex-column d-flex justify-content-between align-items-center h-100">
+  <div
+    class="row flex-column d-flex justify-content-between align-items-center h-100"
+  >
     <div class="col-sm-12 col-lg-6">
       <div
         class="mt-xs-2 mt-sm-3 mt-lg-5 wms-main-header wms-main-header--margin-bottom"
@@ -18,7 +19,7 @@
               matInput
               type="email"
               placeholder="emial@123.com"
-              formControlName="email"              
+              formControlName="email"
             />
           </mat-form-field>
         </div>
@@ -35,24 +36,21 @@
           color="primary"
           type="submit"
           (click)="submitLoginForm()"
-          [disabled]="loginActionInProgress"
+          [disabled]="loginAction.inProgress"
         >
           Login
         </button>
       </form>
 
-      <div class="row mt-5" *ngIf="loginActionInProgress">
+      <div class="row mt-5" *ngIf="loginAction.inProgress">
         <app-spinner />
       </div>
     </div>
 
-    <div class="col-sm-12 col-lg-6">
+    <div class="col-sm-12 col-lg-6" *ngIf="loginAction.showError">
       <div class="alert alert-danger mx-2" role="alert">
         {{ errorMessage }}
       </div>
     </div>
-
-  </div> 
+  </div>
 </div>
-
-
