--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -6,7 +6,8 @@
       <div
         class="mt-xs-2 mt-sm-3 mt-lg-5 wms-main-header wms-main-header--margin-bottom"
       >
-        <h1>WMS</h1>
+        <h1><a routerLink="/main-page">WMS</a></h1>
+
       </div>
 
       <h2>Please login to your account</h2>
