--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -15,5 +15,9 @@
     font-size: 4.2rem;
     margin: 0;
     padding: 0;
+    a {
+      color: white;
+      text-decoration: none;
+    }
   }
 }
