--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -1,1 +1,11 @@
-<h1>Main-page</h1>
+<app-tool-bar/>
+<div class="container">
+  <div class="row mt-5">
+    <div class="col-sm-12 col-lg-4">
+      <app-list></app-list>      
+    </div>
+    <div class="col-sm-12 col-lg-8">
+      <app-user-profile></app-user-profile>     
+    </div>
+  </div>
+</div>
