--- a/src/app/pages/main-page/user-profile/user-profile.component.html
+++ b/src/app/pages/main-page/user-profile/user-profile.component.html
@@ -1,4 +1,4 @@
-<form class="container">
+<form class="container"[formGroup]="userForm">
   <div class="row">
     <div
       class="mb-xs-5 col-sm-12 col-lg-6 p-0 d-flex justify-content-center align-items-center"
@@ -13,27 +13,28 @@
     <div class="col-sm-12 col-lg-6 d-flex flex-column p-0 mt-sm-5 mt-xs-5">
       <mat-form-field class="example-full-width">
         <mat-label>Imię</mat-label>
-        <input matInput />
+        <input matInput  formControlName="name"/>
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>Nazwisko</mat-label>
-        <input matInput />
+        <input matInput formControlName="surname"/>
       </mat-form-field>
 
       <mat-form-field class="example-full-width">
         <mat-label>Stanowisko</mat-label>
-        <input matInput />
+        <input matInput formControlName="position"/>
       </mat-form-field>
 
       <mat-form-field>
         <mat-label>Uprawnienia</mat-label>
-        <mat-select>
-          <mat-option *ngFor="let food of foods" [value]="food.value">
-            {{ food.viewValue }}
+        <mat-select formControlName="entitlements" multiple (selectionChange)="onSelectionChange($event)">
+          <mat-option *ngFor="let entitlement of entitlements" [value]="entitlement.value">
+            {{ entitlement.viewValue }}
           </mat-option>
         </mat-select>
       </mat-form-field>
+      
     </div>
   </div>
 
@@ -44,21 +45,18 @@
         mat-raised-button
         color="primary"
         type="button"
+        (click)="onUserAction(userActionEnum.CREATE)"
       >
         Zapisz
       </button>
-      <button mat-raised-button color="warn" type="button">Usuń</button>
-    </div>
-  </div>
-  <div
-    class="col-sm-12 col-lg-12 p-0 d-flex flex-column justify-content-end h-100"
-  >
-    <div class="alert alert-success mt-3 mb-3" role="alert">
-      {{ "Udało się utworzyć nowy rekord&" }}
-    </div>
-  
-    <div class="alert alert-danger mt-3 mb-3" role="alert">
-      {{ "Próba utworzenia się nie powiodła" }}
+      <button
+        mat-raised-button
+        color="warn"
+        type="button"
+        (click)="onUserAction(userActionEnum.DELETE)"
+      >
+        Usuń
+      </button>
     </div>
   </div>
 </form>
